fix center alignment for profile content loader and error message

--- a/src/pages/commonFeed/components/FeedLayout/components/ProfileContent/ProfileContent.module.scss
+++ b/src/pages/commonFeed/components/FeedLayout/components/ProfileContent/ProfileContent.module.scss
@@ -7,6 +7,9 @@
   align-items: center;
   text-align: center;
 }
+.containerCentered {
+  margin: auto;
+}
 
 .loader {
   margin: auto;
