--- a/src/pages/commonFeed/components/FeedLayout/components/ProfilePane/ProfilePane.module.scss
+++ b/src/pages/commonFeed/components/FeedLayout/components/ProfilePane/ProfilePane.module.scss
@@ -12,6 +12,7 @@
 }
 
 .contentWrapper {
+  flex: 1;
   padding: 1.5rem 0;
   display: flex;
   flex-direction: column;
